background bug jumps fixed

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -121,14 +121,12 @@ h1 {
 }
 
 .bg {
-    background: url("../img/background/hintergrund-neutral.jpg");
- /*   background-size:cover;
-    background-repeat: no-repeat;*/
-
+    background: url("../img/background/hintergrund-neutral.jpg") fixed;
+    background-size:cover;
 }
 
 .sus{
-    background-image: url("../img/icons-neu/schenken-und-spenden.png") !important;
+    background-image: url("../img/icons-neu/schenken-und-spenden.png")!important;
     background-color: transparent !important;
     height: 132.5px;
     display:block;
@@ -547,6 +545,10 @@ h1 {
     border-style:none !important;
 }
 
+.ui-page-header-fixed{
+    padding-top: 3.5em !important;
+}
+
 .linie{
     border-top-style: solid !important;
     border-top-color: white;
@@ -556,4 +558,11 @@ h1 {
     padding-bottom: 25px !important;
     padding-top: 25px !important;
 
+}
+
+/* #container div with absolute position and 100% width and height so it takes up whole window */
+#container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
